<resources>
    <string name="app_name">WTP Estimation Tools</string>
    <string name="action_settings">Settings</string>
    <string name="appVersion">v1.1.2</string>
    <string name="boilerWaterButtonText">Steam Boiler Product Estimates</string>
    <string name="coolingWaterButtonText">Cooling Water Product Estimates</string>
    <string name="boilerLabel">Steam Boiler</string>
    <string name="coolingLabel">Cooling System</string>
    <string name="solidLabel">Solid Chemicals</string>
    <string name="liquidLabel">Liquid Chemicals</string>
    <string name="helpLabel">Help</string>
    <string name="aboutUsLabel">About Us</string>
    <string name="contactUsLabel">Contact Us</string>
    <string name="space"></string>
    <string name="action_estimate">Estimate</string>
    <string name="boilerInputActivity">Steam Boiler Parameters</string>
    <string name="siteNameLabel">Site Name</string>
    <string name="sitePrompt">Name: </string>
    <string name="siteHint">Enter site name</string>
    <string name="inputError">Please enter all data</string>
    <string name="boilerDutyLabel">Boiler Duty</string>
    <string name="summerTitle">Summer</string>
    <string name="winterTitle">Winter</string>
    <string name="steamPrompt">Steam (lb/hr)</string>
    <string name="steamSumHint">Summer steam</string>
    <string name="steamWinHint">Winter steam</string>
    <string name="hoursPrompt">Hours/Day</string>
    <string name="hoursSumHint">Summer hours</string>
    <string name="hoursWinHint">Winter hours</string>
    <string name="daysPrompt">Days/Week</string>
    <string name="daysSumHint">Summer days</string>
    <string name="daysWinHint">Winter days</string>
    <string name="weeksPrompt">Weeks/Year</string>
    <string name="weeksSumHint">Summer weeks</string>
    <string name="weeksWinHint">Winter weeks</string>
    <string name="feedWaterLabel">Feed Water</string>
    <string name="TDSPrompt">TDS</string>
    <string name="TDSHint">TDS</string>
    <string name="TDSUnit">ppm</string>
    <string name="MAlkPrompt">M Alk</string>
    <string name="MAlkHint">M Alk</string>
    <string name="MAlkUnit">ppm</string>
    <string name="pHPrompt">pH</string>
    <string name="pHHint">pH</string>
    <string name="pHUnit"></string>
    <string name="CaHardnessPrompt">Ca Hardness</string>
    <string name="CaHardnessHint">Ca Hardness</string>
    <string name="CaHardnessUnit">ppm</string>
    <string name="tempPrompt">Temperature</string>
    <string name="tempHint">Temperature</string>
    <string name="tempUnit">&#176;C</string>
    <string name="boilerDetailsLabel">Boiler Details</string>
    <string name="maxTDSPrompt">Max TDS</string>
    <string name="maxTDSHint">Max TDS</string>
    <string name="maxTDSUnit">ppm</string>
    <string name="minSulphitePrompt">Min Sulphite Reserve</string>
    <string name="minSulphiteHint">min Sulphite reserve</string>
    <string name="minSulphiteUnit">ppm</string>
    <string name="minCausticPrompt">Min Caustic Alkalinity</string>
    <string name="minCausticHint">Min Caustic Alkalinity</string>
    <string name="minCausticUnit"></string>
    <string name="boilerSolidsResultsActivity">Steam Boiler Estimates (Solids)</string>
    <string name="action_email">Email</string>
    <string name="productTitle">Product</string>
    <string name="dosageTitle">Dosage</string>
    <string name="dosageUnits">(g/m3)</string>
    <string name="usageTitle">Usage</string>
    <string name="usageUnits">(kg/yr)</string>
    <string name="ss1295Title">WTP SS1295</string>
    <string name="ss1295Description">All in One - Sulphite</string>
    <string name="ss1350Title">WTP SS1350</string>
    <string name="ss1350Description">All in One - Sulphite, no caustic</string>
    <string name="ss1095Title">WTP SS1095</string>
    <string name="ss1095Description">Sodium Sulphite</string>
    <string name="ss1995Title">WTP SS1995</string>
    <string name="ss1995Description">Alkalinity Builder</string>
    <string name="ss2295Title">WTP SS2295</string>
    <string name="ss2295Description">Phosphate/Polymer</string>
    <string name="ss8985Title">WTP SS8985</string>
    <string name="ss8985Description">Amines</string>
    <string name="boilerLiquidsResultsActivity">Steam Boiler Estimates (Liquids)</string>
    <string name="s5Title">WTP S5</string>
    <string name="s5Description">17% as Sodium bisulphite/catalysed</string>
    <string name="s10Title">WTP S10</string>
    <string name="s10Description">35% as Sodium bisulphite/catalysed</string>
    <string name="s123Title">WTP S123</string>
    <string name="s123Description">All in One Low Sulphite</string>
    <string name="s125Title">WTP S125</string>
    <string name="s125Description">All in One High Sulphite</string>
    <string name="s26Title">WTP S26</string>
    <string name="s26Description">25% tannin/caustic</string>
    <string name="s28Title">WTP S28</string>
    <string name="s28Description">25% tannin</string>
    <string name="s19Title">WTP S19</string>
    <string name="s19Description">Alkalinity Builder</string>
    <string name="s456Title">WTP S456</string>
    <string name="s456Description">Polymer blend</string>
    <string name="s124Title">WTP S124</string>
    <string name="s124Description">All in one Tannin Product</string>
    <string name="s22Title">WTP S22</string>
    <string name="s22Description">Phosphate/Polymer</string>
    <string name="s23Title">WTP S23</string>
    <string name="s23Description">Phosphate/Polymer/Caustic</string>
    <string name="s88Title">WTP S88</string>
    <string name="s88Description">Morpholine/Cyclohex</string>
    <string name="s95Title">WTP S95</string>
    <string name="s95Description">Filming and neutralising amines</string>
    <string name="coolingInputActivity">Cooling Water Parameters</string>
    <string name="criteriaLabel">Criteria</string>
    <string name="circulationPrompt">Circulation</string>
    <string name="circulationHint">circulation</string>
    <string name="circulationUnit">m3/hr</string>
    <string name="deltaTPrompt">∆T</string>
    <string name="deltaTHint">∆T</string>
    <string name="deltaTUnit">&#176;C</string>
    <string name="sumpVolumePrompt">Sump Volume</string>
    <string name="sumpVolumeHint">Sump Volume</string>
    <string name="sumpVolumeUnit">m3</string>
    <string name="sysVolumePrompt">Sys Volume</string>
    <string name="sysVolumeHint">Sys Volume</string>
    <string name="sysVolumeUnit">m3</string>
    <string name="concFactorPrompt">Conc Factor</string>
    <string name="concFactorHint">Conc Factor</string>
    <string name="concFactorUnit"></string>
    <string name="makeupLabel">Makeup Water Quality</string>
    <string name="totalHardnessPrompt">Total Hardness</string>
    <string name="totalHardnessHint">Total Hardness</string>
    <string name="totalHardnessUnit"></string>
    <string name="chloridesPrompt">Chlorides</string>
    <string name="chloridesHint">Chlorides</string>
    <string name="chloridesUnit"></string>
    <string name="coolingDutyLabel">Duty/Operation</string>
    <string name="hoursHint">hours/day</string>
    <string name="daysHint">days/week</string>
    <string name="weeksHint">weeks/year</string>
    <string name="coolingSolidsResultsActivity">Cooling Water Estimates (Solids)</string>
    <string name="costKgTitle">Cost/kg</string>
    <string name="costKgUnits">(£/kg)</string>
    <string name="costAnnumTitle">Cost/Yr</string>
    <string name="costAnnumUnits">(£/yr)</string>
    <string name="inhibitorTitle">Inhibitors</string>
    <string name="hs2097Title">WTP HS2097</string>
    <string name="hs2097Description">All organic scale inhibitor</string>
    <string name="hs4390Title">WTP HS4390</string>
    <string name="hs4390Description">Molybdate Phosphorate scale/corrosion inhibitor</string>
    <string name="hs3990Title">WTP HS3990</string>
    <string name="hs3990Description">Silicate / Phosphonate corrosion inhibitor</string>
    <string name="biocidesTitle">Biocides</string>
    <string name="cs4400Title">WTP CS4400</string>
    <string name="cs4400Description">Biocide + Dispersant</string>
    <string name="cs4802Title">WTP CS4802</string>
    <string name="cs4802Description">Bronopol</string>
    <string name="cs4490Title">WTP CS4490</string>
    <string name="cs4490Description">DBNPA</string>
    <string name="scg1Title">WTP SCG1</string>
    <string name="scg1Description">SDIC</string>
    <string name="cschlorTitle">WTP CS Chlor</string>
    <string name="cschlorDescription">Cal Hypo Tablet</string>
    <string name="c42tTitle">WTP C42T</string>
    <string name="c42tDescription">Bromine tablets (brominator)</string>
    <string name="coolingLiquidsResultsActivity">Cooling Estimates (Liquids)</string>
    <string name="nOxBiocides01">Biocides</string>
    <string name="nOxBiocides02">Non-Oxidising</string>
    <string name="doseRate">Dose Rate</string>
    <string name="doseRateUnits">mg/L in system</string>
    <string name="helpIntroTitle">Introduction</string>
    <string name="helpIntro">This app provides a set of calculators for estimating the amount of products needed for addressing the treatment of 
Boiler and Cooling Water Systems. \n
The app and calculators are offered in good faith for guidance only; site parameters can change and details gained at survey 
stage may not always be accurate. 
WTP Ltd and the developers offer the app in good faith and without warrantee; its purpose is for general guidance of possible 
chemicals usage only.
\n\n
More information on the various screens is provided below&#8230; \n</string>
    <string name="helpGeneralTitle">General</string>
    <string name="helpBoilerTitle">Steam Boiler Product Estimates</string>
    <string name="helpBoiler">        This is a set of screens where you can enter parameters for your system and then estimate the amount of associated WTP products that you would need, 
based on the data entered. 
\n\n
On the first screen, enter the relevant data for your system, then touch the "calculate" icon on the top bar (on the right). 
This will then display a summary of the product estimates.
\n\n
Note that there a lot of input fields, so the easiest way to enter data is to use the "Next" button above the keyboard - this will move to the next 
field without having to dismiss the keyboard and manually scroll to the next field.
If valid, the data is saved and restored when you run the app again (saves a lot of typing). 
\n\n
If you are going to the trouble of entering the data, you probably need to do something with it! To help in this regard, the "Email" icon will summarise 
the inputs and estimates in an email which you can edit and send to any email address.</string>
    <string name="helpCoolingTitle">Cooling Water Product Estimates</string>
    <string name="helpCooling">This is a set of screens that is essentially the same as the Boiler Water screens, but for Cooling Water Systems
\n\n
Navigation and data entry are similar to the Boiler Water screens, and data is also restored from previous usage and email can be sent if desired.</string>
    <string name="helpAboutTitle">About Us</string>
    <string name="helpAbout">This screen provides an introduction to Water Treatment Products, Inc.</string>
    <string name="helpContactTitle">Contact Us</string>
    <string name="helpContact">This screen provides a variety of contact information, including:
\n\n
- web site\n
- telephone and FAX numbers\n
- various email addresses\n
- office address\n
\n
Where supported by the device, you can touch the appropriate field to activate that method of communication, such as launching the browser at the web site, 
calling the contact number, initiating an email or showing a map of the office location.</string>
    <string name="helpCopyrightTitle">Copyright</string>
    <string name="helpCopyright">        \n
Copyright &#169; 2013, Water Treatment Products Incorporated and Nateemma LLC\n</string>
</resources>