<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="none" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- ===================================================== -->
        <!-- INTRO -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpIntroTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpIntro"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <!-- ===================================================== -->
        <!-- General Overview -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpGeneralTitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dip" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Help image"
                android:cropToPadding="false"
                android:scaleType="matrix"
                android:src="@drawable/help_main_screen" >

</ImageView>
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <!-- ===================================================== -->
        <!-- STEAM BOILER -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpBoilerTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpBoiler"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        
        <!-- ===================================================== -->
        <!-- Cooling Water -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpCoolingTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpCooling"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <!-- ===================================================== -->
        <!-- About -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpAboutTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpAbout"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <!-- ===================================================== -->
        <!-- Contact -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpContactTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpContact"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <!-- ===================================================== -->
        <!-- Copyright -->
        <!-- ===================================================== -->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/WTP_translucent_blue" >

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:padding="6dip"
                android:text="@string/helpCopyrightTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip" >

            <TextView
                android:layout_weight="1"
                android:paddingLeft="12dip"
                android:text="@string/helpCopyright"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

</ScrollView>